dockerizando the api

--- a/others/fullstack/.env
+++ b/others/fullstack/.env
@@ -1,17 +1,19 @@
 # Mysql Live
 API_SECRET=98hbun98h #Used when creating a JWT. It can be anything
-DB_HOST=127.0.0.1
+#DB_HOST=127.0.0.1
+DB_HOST=fullstack-mysql
 DB_DRIVER=mysql
-DB_USER=root
+DB_USER=renan
 DB_PASSWORD=password
 DB_NAME=fullstack
-DB_PORT=33060 #Default mysql port
+DB_PORT=3306 #Default mysql port
 
 # Mysql Test
-TestApiSecret=98hbun98h
-TestDbHost=127.0.0.1
-TestDbDriver=mysql
-TestDbUser=root
-TestDbPassword=password
-TestDbName=fullstack-db-test
-TestDbPort=33060
+#TestApiSecret=98hbun98h
+##TestDbHost=127.0.0.1
+#TEST_DB_HOST=fullstack-db-test
+#TestDbDriver=mysql
+#TestDbUser=root
+#TestDbPassword=password
+#TestDbName=fullstack-db-test
+#TestDbPort=33060
